# sylkos-xyz

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  cmds.sh  package-lock.json  package.json  shell.nix  tailwind.config.js
.github/workflows/: build.yml  deploy.yml
assets/: berry.txt
assets/blog/: nixos-why.md  website-meta.md
assets/pages/: about.md  contact.md
docs/: CNAME  catppuccin.css  index.html  pub_gpg.key  tailwind.css  tsparticles.stars.js
docs/assets/dioxus/: sylkos-xyz.js  sylkos-xyz_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
docs/blog/1/: blog.toml  source1.md
docs/pages/: about.md
js/: particles.js
public/: atom-one-dark.css  particles.js  sylkos_sshkey  tailwind.css
public/blog/: nixos-why.md
public/blog/1/: blog.toml  source2.md
public/pages/: about.md  contact.md
src/: lib.rs  main.rs
src/components/: document.rs  index.rs  markdown.rs  mod.rs  stars.rs  topbar.rs  transtext.rs  tsparticles.rs
src/pages/: about.rs  blog.rs  home.rs  links.rs  mod.rs  random.rs  test.json  testing.rs
