[package]
name = "sylkos-xyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
manganis = "0.2.2"
pulldown-cmark = "0.10.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
