[package]
name = "sylkos-xyz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.5.1"
dioxus-router = "0.5.0"
dioxus-web = "0.5.1"
manganis = "0.2.2"
pulldown-cmark = "0.10.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
chrono = { version = "0.4.38", features = ["serde"] }
toml = "0.8.13"
lazy_static = "1.4.0"